# lambdadroids

./: .gitmodules  lambdaroids.cabal  stack.yaml
src/: Main.hs
